# loci_platform

./: .gitignore  README.md  pyproject.toml
apps/bike-map/: index.html
apps/bike_map/: index.html
infra/: .terraform.lock.hcl  README.md  backend.tf  dev.s3.tfbackend  main.tf  outputs.tf  prod.s3.tfbackend  providers.tf  variables.tf
infra/bootstrap/dev/: main.tf
infra/bootstrap/prod/: main.tf
infra/bootstrap/staging/: main.tf
infra/modules/bike-map/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/dns-zone/: main.tf  outputs.tf  variables.tf
infra/modules/route-logger/: main.tf  outputs.tf  variables.tf
infra/modules/state/: main.tf  output.tf  variables.tf  versions.tf
notebooks/datagen/: incremental_faker_dev.ipynb  mock_up_data_model_data.py
platform/: .dockerignore  README.md  docker-compose.yaml  profiles.yml
platform/airflow/config/: airflow.cfg
platform/airflow/dags/: .airflowignore  dbt_build_dag.py  development_dag.py  download_and_ingest_tiger_data.py  generate_and_ingest_data.py  update_chicago_311_service_requests.py  update_chicago_homicide_and_non_fatal_shooting_victimizations.py  update_chicago_red_light_camera_violations.py  update_chicago_speed_camera_violations.py  update_chicago_towed_vehicles.py  update_chicago_traffic_crashes_crashes.py  update_chicago_traffic_crashes_vehicles.py
platform/dbt/: dbt_project.yml
platform/dbt/macros/: clean_address.sql  generate_schema_name.sql  normalize_address.sql
platform/dbt/models/: sources.yml
platform/migrations/: README.md
platform/migrations/mysql/: V1__init_schema.sql  V2__init_non_stg_base_tables.sql
platform/migrations/postgres/: V10__add_socrata_version_metadata_column.sql  V11__adds_metadata_cols_to_track.sql  (+31 more)
(+237 files in other folders)
